<resources>
    <string name="app_name">FlightSearchApplication</string>
    <string name="navigation_title_home">Flight search</string>
    <string name="navigation_title_favority">Favority flights</string>
    <string name="navigation_title_airport">Flight from</string>
    <string name="search_field_label">Input airport name or IATA here</string>
    <string name="search_field_clear_button">Clear search field</string>
    <string name="back_button">Back</string>
    <string name="favorite_button">Favorite</string>
    <string name="home_button">Home</string>
    <string name="airport_tag">Airport</string>
    <string name="text_from">From:</string>
    <string name="text_to">To:</string>
</resources>